<resources>
    <!--<string name="app_name">浩源车网</string>-->
    <string name="app_name">会玩车</string>
    <string name="mind">玩会员</string>
    <string name="firstpage">首页</string>
    <string name="recommend_car">推荐车型</string>
    <string name="car_calculator">车贷计算器</string>
    <string name="recommend_product">推荐分期</string>
    <string name="reimbursement">还款</string>

    <string name="car_loan_total_price">总价(元)</string>
    <string name="car_loan_dowan_payments">首付(元)</string>
    <string name="car_loan_monthly_supply">月供(元)</string>
    <string name="car_loan_many_money">多花(元)</string>
    <string name="title_activity_car_calculator">CarCalculatorActivity</string>
    <string name="car_calculator_title">车贷计算器</string>
    <string name="car_calculator_model">型号</string>
    <string name="car_calculator_brand">品牌</string>
    <string name="car_calculator_one_pay">首付</string>
    <string name="car_calculator_control_year">还款期数</string>
    <string name="nick_name">昵称</string>
    <string name="phone">修改手机号</string>
    <string name="psw">修改登录密码</string>
    <string name="pay_psw">修改支付密码</string>
    <string name="receive_address">修改收货地址</string>
    <string name="sign">退出登录</string>
    <string name="logo">头像</string>
    <string name="UserInfoUpdateActivityTitle">账户设置</string>
    <string name="UpDateLogInPSW">修改登录密码</string>
    <string name="UpDatePayPSW">修改支付密码</string>
    <string name="user_phone">手机号</string>
    <string name="check_code">验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_check">确认密码</string>
    <string name="yes_updata_psw">确定修改</string>
    <string name="UpDataPhoneActivityTitle">修改手机号</string>
    <string name="current_integral">当前积分</string>
    <string name="month_calculation">月供计算</string>
    <string name="remain_loans">剩余贷款</string>
    <string name="CarDetails">车辆详情</string>
    <string name="regist_pay">发起扣款</string>
    <string name="OrderSubmit">订单提交</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_type">支付方式</string>
    <string name="yue_pay">余额</string>
    <string name="wechat_pay">微信支付</string>
    <string name="aili_pay">支付宝</string>
    <string name="into_pay">立即支付</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="update_nick_name_succ">昵称修改成功</string>
    <string name="sure_logout">确定退出登录?</string>
    <string name="user_new_phone">新手机号</string>
    <string name="noupdata_phone">手机号码修改失败</string>
    <string name="noupdata_phone_succer">手机号码修改成功</string>
    <string name="update_logo_succ">头像更换成功</string>
    <string name="loan_sms">贷款信息</string>
    <string name="loan_car">贷款车辆</string>
    <string name="loan_total">欠款总额</string>
    <string name="loan_term">贷款期数</string>
    <string name="repayment_plan">还款计划</string>
    <string name="repayment_number">还款卡号</string>
    <string name="loan_type">贷款状态</string>
    <string name="early_repayment">提前还款</string>
    <string name="loan_plan">还款计划</string>
    <string name="ExhibitionCenter">展销中心</string>
    <string name="my_car_loan">我的车贷申请</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_type">订单编号:</string>
    <string name="empty_text">数据为空</string>
    <string name="no_recommend_product">暂无推荐商品</string>
    <string name="product_details">商品详情</string>
    <string name="please_select_product_spec">请先选择产品规格</string>
    <string name="no_product">该规格产品缺货</string>
    <string name="empty_apply_order">申请单为空</string>
    <string name="my_order">我的订单</string>
    <string name="waite_pay">待支付</string>

    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="copyright">\@2017CON版权所有</string>

    <string name="share_succ">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">取消分享</string>
</resources>
