<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.cdkj.huatuweitong.module.user.UpDataLoginPSW">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/user_phone"
                android:textColor="@color/break_text" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/break_text"
                tools:text="13938381438" />

        </LinearLayout>

        <include layout="@layout/view_1dp_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/check_code"
                android:textColor="@color/break_text" />

            <EditText
                android:id="@+id/tv_check_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入验证码"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="@color/break_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/blue_tv_round_bg"
                android:gravity="center"
                android:hint="@string/get_check_code"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/pink_text" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/new_psw"
                android:textColor="@color/break_text" />

            <EditText
                android:id="@+id/et_new_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="请输入密码(不少于6位数字)"
                android:maxLength="20"
                android:singleLine="true" />

        </LinearLayout>

        <include layout="@layout/view_1dp_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/new_psw_check"
                android:textColor="@color/break_text" />

            <EditText
                android:id="@+id/et_new_psw_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="请再次输入"
                android:maxLength="20"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_yes_updata_psw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_updata_psw_bg"
            android:text="@string/yes_updata_psw"
            android:textColor="@drawable/text_updata_psw_color" />

    </LinearLayout>
</layout>
