<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.cdkj.huatuweitong.module.mfirst_page.PayActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money"
                android:textColor="@color/break_text"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_pay_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="¥39.90"
                android:textColor="@color/shell_red"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/pay_type" />

        <include layout="@layout/view_1dp_line" />

        <LinearLayout
            android:id="@+id/ll_yue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_yue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/yue_pay" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_yue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(可用余额为100.00元)" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_yue"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_pay_check" />

        </LinearLayout>

        <include layout="@layout/view_1dp_line" />

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wechat_pay" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_pay_uncheck" />

        </LinearLayout>

        <include layout="@layout/view_1dp_line" />

        <LinearLayout
            android:id="@+id/ll_ali"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_alipay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/aili_pay" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_ali"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_pay_uncheck" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_to_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_updata_psw_bg"
            android:text="@string/into_pay"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>
