<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/selector_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxLength="5"
                android:text="@string/logo"
                android:textColor="@color/text_black_cd"
                android:textSize="16sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/photo_default"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@mipmap/ic_more"/>

        </LinearLayout>

        <View
            style="@style/style_split_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_nick_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:img_right="@mipmap/ic_more"
            app:txt_left="昵称"/>

        <View
            style="@style/style_split_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:img_right="@mipmap/ic_more"
            app:txt_left="@string/phone"/>

        <View
            style="@style/style_split_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_psw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:img_right="@mipmap/ic_more"
            app:txt_left="@string/psw"/>


        <View
            style="@style/style_split_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_pay_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:img_right="@mipmap/ic_more"
            app:txt_left="@string/pay_psw"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray_line"
            android:visibility="gone"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_receive_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:img_right="@mipmap/ic_more"
            app:txt_left="@string/receive_address"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:visibility="gone"/>

        <com.cdkj.baselibrary.views.RowInfoLayout
            android:id="@+id/row_receive_bank_caard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:img_right="@mipmap/ic_more"
            app:txt_left="银行卡管理"/>

        <Button
            android:id="@+id/row_signout"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_std_btn_border"
            android:text="退出登录"
            android:textColor="#fff89c44"
            android:textSize="16sp"/>

    </LinearLayout>
</layout>
