<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:text="@string/car_loan_total_price"
                android:textColor="@color/white_car_loan"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:text="123456"
                android:textColor="@color/white_car_loan"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/white_car_loan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_loan_dowan_payments"
                        android:textColor="@color/white_car_loan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_dowan_payments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:text="456789"
                        android:textColor="@color/white_car_loan"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray_line" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_loan_monthly_supply"
                        android:textColor="@color/white_car_loan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_monthly_supply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:text="2300"
                        android:textColor="@color/white_car_loan"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray_line" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_loan_many_money"
                        android:textColor="@color/white_car_loan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_many_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:text="3100"
                        android:textColor="@color/white_car_loan"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/car_calculator_model" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="奥迪" />

            <ImageView
                android:id="@+id/iv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_more" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/car_calculator_brand" />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="2018款 30周年限定款"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_more" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"

            android:background="@color/gray_line" />


        <LinearLayout

            android:id="@+id/ll_one_pay"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/car_calculator_one_pay" />

            <TextView
                android:id="@+id/tv_one_pay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="30%"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_one_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_more" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/gray_line" />


        <LinearLayout
            android:id="@+id/ll_control_year"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/car_calculator_control_year" />

            <TextView

                android:id="@+id/tv_control_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="1"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_control_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_more" />
        </LinearLayout>
        <!--<View-->
        <!--android:background="#fff"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"/>-->

        <TextView
            android:id="@+id/tv_pay_car"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="@drawable/blue_tv_round_bg"
            android:gravity="center"
            android:text="申请分期购车"
            android:textColor="@color/white_car_loan" />

    </LinearLayout>
</layout>
